--- a/HTML/6_background_image.html
+++ b/HTML/6_background_image.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="/CSS/6_background_image.css">
 </head>
 <body>
+    <!-- 
+It is used to set background image of an HTML element.
+By default, the background-image property repeats an image both horizontally
+and vertically so it covers the entire element. 
+While setting the background image for an HTML element, 
+we should also specify a background color that will be used if the image 
+is not available. We can set this property to none or url of an image.
+
+     -->
     <p id="para2">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
